--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -31,18 +31,18 @@
 //   }
 // }
 
-.modal-dialog.signup-modal-master {
-  input[type="submit"] {
-    @extend .btn-sign-up;
-    display: block;
-    width: 100%;
-  }
-}
+// .modal-dialog.signup-modal-master {
+//   input[type="submit"] {
+//     // @extend .btn-sign-up;
+//     // display: block;
+//     width: 100%;
+//   }
+// }
 
-.form-inputs.sign-up-modal-form {
-  input[type="submit"] {
-    @extend .btn-sign-up;
-    display: block;
-    width: 100%;
-  }
-}
+// .form-inputs.sign-up-modal-form {
+//   input[type="submit"] {
+//     // @extend .btn-sign-up;
+//     // display: block;
+//     width: 100%;
+//   }
+// }
