--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -52,6 +52,6 @@
   @media (max-width: 500px) {
     .modal.left .modal-dialog,
     .modal.right .modal-dialog {
-      width: 90%;
+      width: 95%;
     }
   }
