--- a/app/assets/stylesheets/pages/_sign_up.scss
+++ b/app/assets/stylesheets/pages/_sign_up.scss
@@ -9,25 +9,6 @@
   background-size: cover;
 }
 
-.select2-container {
-    box-sizing: border-box;
-    display: inline-block;
-    margin: 0;
-    position: relative;
-    vertical-align: middle;
-    width: 100% !important;
-}
-
-// @media (max-width: 500px) {
-//   .form-inputs {
-//     max-width: 320px !important
-//   }
-//   //   .select2-container {
-//   //  max-width: 250px!important
-//   // }
-
-// }
-
 .bottom-banner {
   width: 100%;
   height: 563px;
